--- a/chart/validator-plugin-vsphere/crds/validation.spectrocloud.labs_vspherevalidators.yaml
+++ b/chart/validator-plugin-vsphere/crds/validation.spectrocloud.labs_vspherevalidators.yaml
@@ -17,7 +17,7 @@ spec:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: VsphereValidator is the Schema for the vspherevalidators API
+        description: VsphereValidator is the Schema for the vspherevalidators API.
         properties:
           apiVersion:
             description: |-
@@ -37,14 +37,14 @@ spec:
           metadata:
             type: object
           spec:
-            description: VsphereValidatorSpec defines the desired state of VsphereValidator
+            description: VsphereValidatorSpec defines the desired state of VsphereValidator.
             properties:
               auth:
                 description: VsphereAuth defines authentication configuration for
-                  an VsphereValidator.
+                  a VsphereValidator.
                 properties:
                   account:
-                    description: Account is the vCenter account to use for authentication
+                    description: Account is the vCenter account to use for authentication.
                     properties:
                       host:
                         description: Host is the vCenter URL.
@@ -67,49 +67,49 @@ spec:
                     type: object
                   secretName:
                     description: SecretName is the name of the secret containing the
-                      vSphere credentials
+                      vSphere credentials.
                     type: string
                 type: object
               computeResourceRules:
                 items:
-                  description: ComputeResourceRule defines the compute resource validation
-                    rule
+                  description: ComputeResourceRule defines a compute resource validation
+                    rule.
                   properties:
                     clusterName:
-                      description: ClusterName is required when the vCenter Entity
-                        resides beneath a Cluster in the vCenter object hierarchy
+                      description: ClusterName is required when the vCenter entity
+                        resides beneath a Cluster in the vCenter object hierarchy.
                       type: string
                     entityName:
-                      description: EntityName is the name of the entity to validate
+                      description: EntityName is the name of the entity to validate.
                       type: string
                     name:
                       description: RuleName is the name of the compute resource validation
-                        rule
+                        rule.
                       type: string
                     nodepoolResourceRequirements:
                       description: NodepoolResourceRequirements is the list of nodepool
-                        resource requirements
+                        resource requirements.
                       items:
                         description: NodepoolResourceRequirement defines the resource
-                          requirements for a nodepool
+                          requirements for a nodepool.
                         properties:
                           cpu:
-                            description: CPU is the CPU requirement for the nodepool
+                            description: CPU is the CPU requirement for the nodepool.
                             type: string
                           diskSpace:
                             description: DiskSpace is the disk space requirement for
-                              the nodepool
+                              the nodepool.
                             type: string
                           memory:
                             description: Memory is the memory requirement for the
-                              nodepool
+                              nodepool.
                             type: string
                           name:
-                            description: Name is the name of the nodepool
+                            description: Name is the name of the nodepool.
                             type: string
                           numberOfNodes:
                             description: NumberOfNodes is the number of nodes in the
-                              nodepool
+                              nodepool.
                             type: integer
                         required:
                         - cpu
@@ -121,7 +121,7 @@ spec:
                       type: array
                     scope:
                       description: Scope is the scope of the compute resource validation
-                        rule
+                        rule.
                       type: integer
                   required:
                   - entityName
@@ -134,20 +134,20 @@ spec:
                 type: string
               ntpValidationRules:
                 items:
-                  description: NTPValidationRule defines the NTP validation rule
+                  description: NTPValidationRule defines a NTP validation rule.
                   properties:
                     clusterName:
                       description: ClusterName is required when the vCenter Host(s)
-                        reside beneath a Cluster in the vCenter object hierarchy
+                        reside beneath a Cluster in the vCenter object hierarchy.
                       type: string
                     hosts:
                       description: Hosts is the list of vCenter Hosts to validate
-                        NTP configuration
+                        NTP configuration.
                       items:
                         type: string
                       type: array
                     name:
-                      description: RuleName is the name of the NTP validation rule
+                      description: RuleName is the name of the NTP validation rule.
                       type: string
                   required:
                   - hosts
@@ -157,58 +157,57 @@ spec:
               privilegeValidationRules:
                 items:
                   description: PrivilegeValidationRule defines the privilege validation
-                    rule
+                    rule.
                   properties:
                     clusterName:
-                      description: ClusterName is required when the vCenter Entity
-                        resides beneath a Cluster in the vCenter object hierarchy
+                      description: ClusterName is required when the vCenter entity
+                        resides beneath a Cluster in the vCenter object hierarchy.
                       type: string
                     entityName:
-                      description: EntityName is the name of the entity to validate
+                      description: EntityName is the name of the vCenter entity to
+                        validate privileges on.
                       type: string
                     entityType:
-                      description: EntityType is the type of the entity to validate
+                      description: EntityType is the vCenter entity type.
                       type: integer
                     name:
-                      description: RuleName is the name of the entity privilege validation
-                        rule
+                      description: RuleName is the name of the privilege validation
+                        rule.
                       type: string
                     privileges:
                       description: Privileges is the list of privileges to validate
-                        that the user has
+                        that the user has with respect to the designated entity.
                       items:
                         type: string
                       type: array
-                    username:
-                      description: Username is the username to validate against
-                      type: string
                   required:
                   - entityName
                   - entityType
                   - name
                   - privileges
-                  - username
                   type: object
                 type: array
               tagValidationRules:
                 items:
-                  description: TagValidationRule defines the tag validation rule
+                  description: TagValidationRule defines a tag validation rule.
                   properties:
                     clusterName:
-                      description: ClusterName is required when the vCenter Entity
-                        resides beneath a Cluster in the vCenter object hierarchy
+                      description: ClusterName is required when the vCenter entity
+                        resides beneath a Cluster in the vCenter object hierarchy.
                       type: string
                     entityName:
-                      description: EntityName is the name of the entity to validate
+                      description: EntityName is the name of the vCenter entity to
+                        validate tags for.
                       type: string
                     entityType:
-                      description: EntityType is the type of the entity to validate
+                      description: EntityType is the type of the vCenter entity to
+                        validate.
                       type: integer
                     name:
-                      description: RuleName is the name of the tag validation rule
+                      description: RuleName is the name of the tag validation rule.
                       type: string
                     tag:
-                      description: Tag is the tag to validate on the entity
+                      description: Tag is the tag to validate on the vCenter entity.
                       type: string
                   required:
                   - entityName
@@ -222,7 +221,7 @@ spec:
             - datacenter
             type: object
           status:
-            description: VsphereValidatorStatus defines the observed state of VsphereValidator
+            description: VsphereValidatorStatus defines the observed state of VsphereValidator.
             type: object
         type: object
     served: true
