--- a/chart/validator-plugin-vsphere/crds/validation.spectrocloud.labs_vspherevalidators.yaml
+++ b/chart/validator-plugin-vsphere/crds/validation.spectrocloud.labs_vspherevalidators.yaml
@@ -172,6 +172,15 @@ spec:
                       description: EntityType is the type of the vCenter entity to
                         validate.
                       type: integer
+                    groupPrincipals:
+                      description: |-
+                        GroupPrincipals is an optional list of vCenter group principals that the user is a member of.
+                        Group membership can be determined dynamically by a vSphere admin user, but specifying
+                        group principals manually allows privilege validation for non-admin users.
+                        Group principals must be of the format DOMAIN\group-name, e.g., VSPHERE.LOCAL\my-custom-group.
+                      items:
+                        type: string
+                      type: array
                     name:
                       description: RuleName is the name of the privilege validation
                         rule.
@@ -180,7 +189,23 @@ spec:
                       description: Privileges is the list of privileges to validate
                         that the user has with respect to the designated vCenter entity.
                       items:
-                        type: string
+                        description: Privilege represents a vCenter privilege and
+                          expected metadata associated with the permission that grants
+                          it.
+                        properties:
+                          name:
+                            description: Name of the vCenter privilege in API format,
+                              e.g., "Alarm.Acknowledge"
+                            type: string
+                          propagated:
+                            description: Propagated indicates whether the permission
+                              that grants this privilege is expected to be propagated
+                              or not.
+                            type: boolean
+                        required:
+                        - name
+                        - propagated
+                        type: object
                       type: array
                   required:
                   - entityName
