docs: update samples
Signed-off-by: Tyler Gillson <tyler.gillson@gmail.com>

--- a/config/samples/vsphere-validator-explicit-auth.yaml
+++ b/config/samples/vsphere-validator-explicit-auth.yaml
@@ -10,13 +10,13 @@ metadata:
   name: vspherevalidator-explicit-auth
   namespace: validator
 spec:
-  datacenter: "Datacenter"
   auth:
-    cloudAccount:
+    account:
       insecure: true
       username: "user@vsphere.local"
       password: "password"
-      vcenterServer: "vcenter.example.com"
+      host: "vcenter.example.com"
+  datacenter: "Datacenter"
   tagValidationRules:
     - name: "Folder tag validation"
       clusterName: "Cluster2"
