--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,6 +6,8 @@ issues:
   # don't skip warning about doc comments
   # don't exclude the default set of lint
   exclude-use-default: false
+  # restore some of the defaults
+  # (fill in the rest as needed)
   exclude-dirs:
     - tests
   exclude-files:
@@ -16,6 +18,7 @@ linters:
   enable:
     - dupl
     - errcheck
+    - copyloopvar
     - ginkgolinter
     - goconst
     - gocyclo
@@ -33,3 +36,8 @@ linters:
     - unconvert
     - unparam
     - unused
+
+linters-settings:
+  revive:
+    rules:
+      - name: comment-spacings
